--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "firebase": "^9.23.0",
     "serverless-http": "^3.2.0"
   },
   "devDependencies": {
