--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [functions]
   external_node_modules = ["express", "ejs"]
   node_bundler = "esbuild"
-  included_files = ["views/**", "config/**", "controllers/**", "routes/**", "utils/**"]
+  included_files = ["views/**"]
 [[redirects]]
   force = true
   from = "/*"
