--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "firebase": "^9.23.0",
-    "serverless-http": "^3.2.0"
+    "firebase-admin": "^11.9.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
