--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
-    "firebase-admin": "^11.9.0"
+    "firebase-admin": "^11.9.0",
+    "mongoose": "^8.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
